web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-destructuring13/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export function foo4() {};
 |^
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (2,1)
2|export const { a: [{ foo4: foo }], b, c: { foo2: [{ foo3: foo4 }] } } = bar;
 |^
[SyntaxError]: Identifier has already been declared. (2,59)
2|export const { a: [{ foo4: foo }], b, c: { foo2: [{ foo3: foo4 }] } } = bar;
 |                                                         ^
[SyntaxError]: Identifier has already been declared. (2,59)
2|export const { a: [{ foo4: foo }], b, c: { foo2: [{ foo3: foo4 }] } } = bar;
 |                                                         ^
